Fix lint errors.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 -->
 <html>
   <head>
-    <meta>
+    <meta charset="utf-8">
     <title>CP2: Poker</title>
     <link rel="stylesheet" href="styles.css">
     <script src="index.js"></script>
@@ -69,14 +69,14 @@
         <section>
           <p>
             This is a simplified version of 5 card draw poker. To start the player must ante $25 to
-            draw 5 cards. If the player does not have enough money they can not ante and must refresh
-            the page.
+            draw 5 cards. If the player does not have enough money they can not ante and must
+            refreshthe page.
           </p>
           <p>
-            Once the player has drawn 5 cards they can click on ones that they would like to discard.
-            Selected cards to discard will be flipped over and can be unflipped if the player decides
-            to keep it instead. Once the player is happy with the cards to discard select discard,
-            this costs an additional $25.
+            Once the player has drawn 5 cards they can click on ones that they would like to
+            discard. Selected cards to discard will be flipped over and can be unflipped if the
+            player decides to keep it instead. Once the player is happy with the cards to discard
+            select discard, this costs an additional $25.
           </p>
         </section>
         <section>
