Refactor checkMultiples, lint error fixes, and a note to the rules.

--- a/index.html
+++ b/index.html
@@ -78,6 +78,18 @@
             player decides to keep it instead. Once the player is happy with the cards to discard
             select discard, this costs an additional $25.
           </p>
+          <p>
+            Game notes:
+            <ul>
+              <li>
+                This game considers ace to be only high, ie. ace can not be played in A, 2, 3, 4, 5.
+              </li>
+              <li>
+                Kicker cards are not considered in determining a winner. If player and computer
+                have the same main hand it will be considered a tie.
+              </li>
+            </ul>
+          </p>
         </section>
         <section>
           <h3>Poker Hands</h3>
