Restyle new note, fix compile errors

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             select discard, this costs an additional $25.
           </p>
           <p>
-            Game notes:
+            <strong>Game notes:</strong>
             <ul>
               <li>
                 This game considers ace to be only high, ie. ace can not be played in A, 2, 3, 4, 5.
