--- a/index.html
+++ b/index.html
@@ -78,18 +78,16 @@
             player decides to keep it instead. Once the player is happy with the cards to discard
             select discard, this costs an additional $25.
           </p>
-          <p>
-            <strong>Game notes:</strong>
-            <ul>
-              <li>
-                This game considers ace to be only high, ie. ace can not be played in A, 2, 3, 4, 5.
-              </li>
-              <li>
-                Kicker cards are not considered in determining a winner. If player and computer
-                have the same main hand it will be considered a tie.
-              </li>
-            </ul>
-          </p>
+          <p><strong>Game notes:</strong></p>
+          <ul>
+            <li>
+              This game considers ace to be only high, ie. ace can not be played in A, 2, 3, 4, 5.
+            </li>
+            <li>
+              Kicker cards are not considered in determining a winner. If player and computer
+              have the same main hand it will be considered a tie.
+            </li>
+          </ul>
         </section>
         <section>
           <h3>Poker Hands</h3>
